--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ body {
 textarea {
   font-size: 2em;
   resize: none;
-  width: 300px;
+  width: 100%;
   height: 3em;
 }
 
@@ -39,10 +39,16 @@ textarea {
   display: grid;
   -ms-grid-rows: 2fr 1fr;
       grid-template-rows: 2fr 1fr;
+  min-width: 300px;
 }
 
-.wrapper .main .main-display {
+.wrapper .main #main-display {
   background-color: blue;
+}
+
+.wrapper .main #main-display .character-game-object {
+  color: white;
+  display: block;
 }
 
 .wrapper .main .main-controls {
