--- a/style/style.scss
+++ b/style/style.scss
@@ -93,3 +93,8 @@ textarea {
     }
   
 }
+
+.clip {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    //clip-path: polygon(26% 21%, 69% 25%, 80% 68%, 18% 79%);
+  }
