--- a/style/style.css
+++ b/style/style.css
@@ -49,13 +49,14 @@ textarea {
 
 .wrapper .main #main-display {
   position: relative;
-  background-color: blue;
+  background-color: white;
   text-align: center;
 }
 
 .wrapper .main #main-display .character-game-object {
-  color: white;
+  color: #535353;
   display: block;
+  font-size: 1.2em;
   padding: 5px;
   margin-right: 30%;
 }
@@ -69,12 +70,33 @@ textarea {
 
 .wrapper .main #main-display #hud .container {
   text-align: left;
-  padding: 5px;
-  background-color: black;
 }
 
-.wrapper .main #main-display #hud .container div {
-  margin-top: 5px;
+.wrapper .main #main-display #hud .container #game-info {
+  padding: 5px;
+  background-color: #b377a9;
+  -webkit-box-shadow: 0px 2px 1px grey;
+          box-shadow: 0px 2px 1px grey;
+  margin-bottom: 5px;
+}
+
+.wrapper .main #main-display #hud .container .ui-controls {
+  text-align: center;
+  vertical-align: middle;
+  font-size: 50px;
+  height: 55px;
+  padding: 5px;
+}
+
+.wrapper .main #main-display #hud .container .ui-controls div {
+  display: inline-block;
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
+}
+
+.wrapper .main #main-display #hud .container .ui-controls div i {
+  display: inline;
 }
 
 .wrapper .main #main-display #hud p {
