--- a/style/style.scss
+++ b/style/style.scss
@@ -52,11 +52,12 @@ textarea {
         justify-self: center;
         #main-display{
             position: relative;
-            background-color: blue;
+            background-color: white;
             text-align: center;
             .character-game-object{
-                color: white;
+                color: #535353;
                 display: block;
+                font-size: $font-size * 1.2;
                 padding: 5px;
                 margin-right: 30%;
             }
@@ -70,10 +71,29 @@ textarea {
                 
                 .container{
                     text-align: left;
-                    padding: 5px;
-                    background-color: black;
-                    div{
-                        margin-top: 5px;
+                    #game-info{
+                        padding: 5px;
+                        background-color: rgb(179, 119, 169);
+                        box-shadow: 0px 2px 1px grey;
+                        margin-bottom: 5px;
+                    }
+                    .ui-controls{
+                        text-align: center;
+                        vertical-align: middle;
+                        //background-color: rgb(248, 219, 122);
+                        font-size: 50px;
+                        height: 55px;
+                        padding: 5px;
+                        div{
+                           display: inline-block;
+                            height: 50px;
+                            width: 50px;
+                            //background-color: rgb(139, 127, 112);
+                            border-radius: 50px;
+                            i{
+                                display: inline;
+                            }
+                        }
                     }
                 }
                
