--- a/style/style.css
+++ b/style/style.css
@@ -49,7 +49,7 @@ textarea {
 
 .wrapper .main #main-display {
   position: relative;
-  background-color: red;
+  background-color: white;
   text-align: center;
 }
 
