--- a/style/style.scss
+++ b/style/style.scss
@@ -52,7 +52,7 @@ textarea {
         justify-self: center;
         #main-display{
             position: relative;
-            background-color: red;
+            background-color:white;
             text-align: center;
             .character-game-object{
                 color: #535353;
