arrow delete caret selection
made caret select in the end of the text

--- a/style/style.scss
+++ b/style/style.scss
@@ -108,7 +108,7 @@ textarea {
         }
         .main-controls{
             
-            background-color: black;
+            background-color: white;
         }
     }
   
