--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
 
 body {
   background-color: black;
+  font-family: 'Cutive Mono', monospace;
 }
 
 textarea {
@@ -83,6 +84,7 @@ textarea {
 .wrapper .main #main-display #hud .container .ui-controls {
   text-align: center;
   vertical-align: middle;
+  background-color: #f8db7a;
   font-size: 50px;
   height: 55px;
   padding: 5px;
@@ -109,7 +111,83 @@ textarea {
 }
 
 .wrapper .main .main-controls {
+  display: block;
+  position: relative;
   background-color: white;
+}
+
+.wrapper .main .main-controls div {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 50%;
+  z-index: 2;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.5)));
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+}
+
+.wrapper .main #gameover-screen {
+  display: none;
+}
+
+.wrapper .main #gameover-screen strong {
+  font-size: 1.2em;
+}
+
+.wrapper .main #gameover-screen .btn {
+  margin-top: 20px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: block;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 300px;
+  color: #535353;
+  text-align: center;
+}
+
+.btn {
+  padding: 5px;
+  background-color: #81c0fa;
+}
+
+.btn:hover {
+  background-color: #4b6d8b;
+  color: white;
+  cursor: pointer;
+}
+
+.btn:active {
+  background-color: #324352;
+  color: white;
 }
 
 .clip {
