--- a/style/style.scss
+++ b/style/style.scss
@@ -1,5 +1,6 @@
 $bgColor: black;
 $globalFontSize: 1em;
+$mainTextColor: #535353;
 *{
     box-sizing: border-box;
     padding: 0;
@@ -21,6 +22,7 @@ $font-size: 1em;
 }
 body{
     background-color: $bgColor;
+    font-family: 'Cutive Mono', monospace;
 }
 
 textarea {
@@ -55,7 +57,7 @@ textarea {
             background-color:white;
             text-align: center;
             .character-game-object{
-                color: #535353;
+                color: $mainTextColor;
                 display: block;
                 font-size: $font-size * 1.2;
                 padding: 5px;
@@ -80,7 +82,7 @@ textarea {
                     .ui-controls{
                         text-align: center;
                         vertical-align: middle;
-                        //background-color: rgb(248, 219, 122);
+                        background-color: rgb(248, 219, 122);
                         font-size: 50px;
                         height: 55px;
                         padding: 5px;
@@ -107,13 +109,77 @@ textarea {
             }
         }
         .main-controls{
-            
+            display: block;
+            position: relative;
             background-color: white;
+          
+            div{
+               
+                position: absolute; 
+                left: 0px;
+                bottom: 0px;
+                width: 100%;
+                height: 50%;
+                z-index: 2;
+                background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.500));
+               
+            }
+          
+        }
+        #gameover-screen{
+            display: none;
+            strong{
+                font-size: $font-size * 1.2;
+              
+            }
+            .btn{
+                margin-top: 20px;
+            }
         }
     }
   
 }
+/* The Modal (background) */
+.modal {
+    
+    display: block; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
 
+/* Modal Content */
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 300px;
+    color:$mainTextColor;
+    text-align: center;
+  
+}
+.btn{
+    padding: 5px;
+    background-color: rgb(129, 192, 250);
+}
+.btn:hover{
+    background-color: rgb(75, 109, 139);
+    color: white;
+    cursor: pointer;
+}
+.btn:active{
+
+    background-color: rgb(50, 67, 82);
+    color: white;
+}
 .clip {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     //clip-path: polygon(26% 21%, 69% 25%, 80% 68%, 18% 79%);
