--- a/style/style.scss
+++ b/style/style.scss
@@ -78,11 +78,12 @@ textarea {
                         background-color: rgb(179, 119, 169);
                         box-shadow: 0px 2px 1px grey;
                         margin-bottom: 5px;
+                        z-index: 10;
                     }
                     .ui-controls{
                         text-align: center;
                         vertical-align: middle;
-                        background-color: rgb(248, 219, 122);
+                        //background-color: rgb(248, 219, 122);
                         font-size: 50px;
                         height: 55px;
                         padding: 5px;
@@ -106,7 +107,33 @@ textarea {
                 h4{
                     color: white;
                 }
-            }
+                .technology{
+                    margin-top: 5px;
+                    padding: 5px;
+                    background-color: white;
+                    cite{
+                        font-size: $font-size * 0.6;
+                    }
+                    i:nth-of-type(1){
+                        color: #e34f26;
+                    }
+                    
+                    i:nth-of-type(2){
+                        color: #FBBC05;
+                    }
+                    i:nth-of-type(3){
+                        color:#c69;
+                    }
+                    i:nth-of-type(4){
+                       color: #323330;
+                    
+                    }
+                    i:nth-of-type(5){
+                        color: #44883e;
+                     }
+                  
+                }
+            }//hud
         }
         .main-controls{
             display: block;
@@ -145,7 +172,7 @@ textarea {
     display: block; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    padding-top: 200px; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
