--- a/style/style.scss
+++ b/style/style.scss
@@ -36,26 +36,36 @@ textarea {
     display: grid;
     grid-template-columns: 0fr 2fr 0fr;
     grid-auto-rows: minmax(300px, auto);
-    background-color: aqua;
+    background-color: white;
     justify-items: stretch;
     align-items: stretch;
     height: 100vh;
-  
+    
     .div:nth-child(2){
         background-color: red;
     }
+    .shadow{
+        display: grid;
+      
+        width: 340px;
+        height: 588px;
+        align-self: center;
+        justify-self: center;
+    }
     .main{
         display: grid;
-
+        box-shadow: 0px 0px 5px gray;
         grid-template-rows: 3fr 1fr;
         width: 320px;
         height: 568px;
         align-self: center;
         justify-self: center;
+    
         #main-display{
             position: relative;
             background-color:white;
             text-align: center;
+           
             .character-game-object{
                 color: $mainTextColor;
                 display: block;
@@ -76,7 +86,7 @@ textarea {
                     #game-info{
                         padding: 5px;
                         background-color: rgb(179, 119, 169);
-                        box-shadow: 0px 2px 1px grey;
+                        box-shadow: 0px 0px 5px grey;
                         margin-bottom: 5px;
                         z-index: 10;
                     }
@@ -152,7 +162,13 @@ textarea {
                 height: 50%;
                 z-index: 2;
                 background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.500));
-               
+                cite{
+                    position: relative;
+                    left: 25px;
+                    bottom: -30px;
+                    color: white;
+                    z-index: 3;
+                }
             }
           
         }
@@ -182,10 +198,12 @@ textarea {
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     padding-top: 200px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
+    left: 20;
+    top: 20;
+    // width: 100%; /* Full width */
+    // height: 100%; /* Full height */
+    width: 320px;
+    height: 568px;
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -218,5 +236,45 @@ textarea {
 }
 .clip {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+   
     //clip-path: polygon(26% 21%, 69% 25%, 80% 68%, 18% 79%);
   }
+
+  /* ---- reset ---- */ 
+//   body{ margin:0; font:normal 75% Arial, Helvetica, sans-serif; }
+   canvas{ display: block; vertical-align: bottom; } 
+   /* ---- particles.js container ---- */ 
+   #particles-js{ 
+       position:absolute; 
+       width: 100%; 
+       height: 100%; 
+       background-color: #ffffff;
+        background-image: url(""); 
+        background-repeat: no-repeat; 
+        background-size: cover; 
+        background-position: 50% 50%;
+        background-attachment: fixed;
+     } 
+      
+   /* ---- stats.js ---- */ 
+//    .count-particles{ 
+//        background: #000022; 
+//        position: absolute; 
+//        top: 48px; 
+//        left: 0; 
+//        width: 80px; 
+//        color: #13E8E9; 
+//        font-size: .8em; 
+//        text-align: left; 
+//        text-indent: 4px; 
+//        line-height: 14px; 
+//        padding-bottom: 2px; 
+//        font-family: Helvetica, Arial, sans-serif; 
+//        font-weight: bold;
+//      } 
+//    .js-count-particles{ 
+//        font-size: 1.1em; 
+//     } 
+//    #stats, 
+//    .count-particles{ -webkit-user-select: none; margin-top: 5px; margin-left: 5px; } 
+//    #stats{ border-radius: 3px 3px 0 0; overflow: hidden; } .count-particles{ border-radius: 0 0 3px 3px; }
