--- a/style/style.css
+++ b/style/style.css
@@ -157,6 +157,25 @@ textarea {
   color: #44883e;
 }
 
+.wrapper .main #main-display #hud .technology .source {
+  margin-top: 5px;
+  padding-top: 5px;
+  text-align: center;
+}
+
+.wrapper .main #main-display #hud .technology .source i {
+  color: black;
+}
+
+.wrapper .main #main-display #hud .technology .source a {
+  font-size: 2em;
+}
+
+.wrapper .main #main-display #hud .technology .source p {
+  color: #535353;
+  font-size: 1em;
+}
+
 .wrapper .main .main-controls {
   display: block;
   position: relative;
@@ -197,6 +216,22 @@ textarea {
 .wrapper .main #gameover-screen .scores p {
   display: inline;
   color: #44883e;
+}
+
+#manual-container {
+  display: block;
+  padding-top: 5px;
+  padding-left: 5px;
+  float: left;
+}
+
+#manual-container .manual-content {
+  display: inline;
+  text-align: left;
+}
+
+#manual-container .manual-content i {
+  font-weight: 900;
 }
 
 /* The Modal (background) */
