--- a/style/style.scss
+++ b/style/style.scss
@@ -143,7 +143,25 @@ textarea {
                     }
                     i:nth-of-type(5){
                         color: #44883e;
-                     }
+                    }
+                    .source{
+                      
+                        margin-top: 5px;
+                        padding-top: 5px;
+                        i{
+                            color: black;
+                        }
+                        a{
+                           
+                            font-size: $font-size * 2;
+                        }
+                        
+                        text-align: center;
+                        p{
+                            color: $mainTextColor;
+                            font-size: $font-size * 1;
+                        }
+                    }
                   
                 }
             }//hud
@@ -190,6 +208,19 @@ textarea {
         }
     }
   
+}
+#manual-container{
+    display: block;
+    padding-top: 5px;
+    padding-left: 5px;
+    float: left;
+    .manual-content{
+        display: inline;
+        text-align: left;
+        i{
+            font-weight: 900;
+        }
+    }
 }
 /* The Modal (background) */
 .modal {
